Revert "Fixing whitespace inconsistency"
This reverts commit 4dcbfccedab7b10b95555f778690348e501b0d61.

--- a/src/screen.css
+++ b/src/screen.css
@@ -16,70 +16,70 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-  display: block;
+    display: block;
 }
 body {
-  line-height: 1.3;
+    line-height: 1.3;
 }
 ol, ul {
-  list-style: none;
+    list-style: none;
 }
 blockquote, q {
-  quotes: none;
+    quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-  content: '';
-  content: none;
+    content: '';
+    content: none;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 /* end CSS Reset */
 
 header {
-  text-align: center;
-  padding-top: 2em;
-  padding-bottom: 2em;
+    text-align: center;
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
 
 main {
-  text-align: center;
+    text-align: center;
 }
 
 header h1 {
-  font-size: 3em;
+    font-size: 3em;
 }
 
 form {
-  margin-top: 2em;
+    margin-top: 2em;
 }
 
 input {
-  width: 50%;
-  padding: 1ex;
+    width: 50%;
+    padding: 1ex;
 
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 input[type=text], input[type=password] {
-  border: none;
-  border-bottom: thin solid black;
-  margin-bottom: 2em;
+    border: none;
+    border-bottom: thin solid black;
+    margin-bottom: 2em;
 }
 
 input[type=submit] {
@@ -87,31 +87,28 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  color: grey;
+    color: grey;
 }
 
 label {
-  display: none;
+    display: none;
 }
 
 #top, #bottom, #left, #right {
-  background: #DC002A; /* Same as Hawk red */
-  position: fixed;
+    background: #ff3418;
+    position: fixed;
 }
-
 #left, #right {
-  top: 0; bottom: 0;
-  width: 1em;
+    top: 0; bottom: 0;
+    width: 1em;
 }
-
 #left { left: 0; }
 #right { right: 0; }
 
 #top, #bottom {
-  left: 0; right: 0;
-  height: 1em;
+    left: 0; right: 0;
+    height: 1em;
 }
-
 #top { top: 0; }
 #bottom { bottom: 0; }
 
@@ -121,43 +118,43 @@ label {
   50em, size 2
 */
 @media screen and (max-width: 50em) {
-  header h1 {
-    font-size: 8em;
-  }
+    header h1 {
+        font-size: 8em;
+    }
 }
 
 /*
   40em, size 3
 */
 @media screen and (max-width: 40em) {
-  header h1 {
-    font-size: 6em;
-  }
+    header h1 {
+        font-size: 6em;
+    }
 }
 
 /*
   30em, size 4
 */
 @media screen and (max-width: 30em) {
-  header h1 {
-    font-size: 4em;
-  }
+    header h1 {
+        font-size: 4em;
+    }
 }
 
 /*
   20em, size 5
 */
 @media screen and (max-width: 20em) {
-  header h1 {
-    font-size: 2em;
-  }
+    header h1 {
+        font-size: 2em;
+    }
 }
 
 /*
   10em, size 6
 */
 @media screen and (max-width: 10em) {
-  header h1 {
-    font-size: 1em;
-  }
+    header h1 {
+        font-size: 1em;
+    }
 }
